--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-* {
+*{
     box-sizing: border-box;
 }
 
@@ -8,7 +8,6 @@ body {
 }
 
 #container {
-    /* display: none; */
     width: 750px;
     height: 800px;
     background: #eff3f7;
@@ -252,33 +251,139 @@ main footer {
     padding: 20px 30px 10px 20px;
 }
 
-main footer input {
-    resize: none;
+
+
+.message-input {
+    position: absolute;
+    z-index: 99;
+    width: 450px;
+  }
+
+  .message-input .wrap {
+    position: relative;
+  }
+
+  .message-input .wrap input {
+    font-family: "proxima-nova", "Source Sans Pro", sans-serif;
+    float: left;
     border: none;
-    display: block;
-    width: 100%;
-    height: 80px;
-    border-radius: 3px;
-    padding: 20px;
-    font-size: 13px;
-    margin-bottom: 13px;
-}
+    width: calc(100% - 90px);
+    padding: 11px 32px 10px 8px;
+    font-size: 0.8em;
+    color: #32465a;
+  }
 
-main footer img {
-    height: 30px;
+  @media screen and (max-width: 735px) {
+    .message-input .wrap input {
+      padding: 15px 32px 16px 8px;
+    }
+  }
+
+  .message-input .wrap input:focus {
+    outline: none;
+  }
+
+.message-input .wrap .attachment {
+    position: absolute;
+    right: 80px;
+    z-index: 4;
+    margin-top: 10px;
+    font-size: 1.1em;
+    color: #435f7a;
+    opacity: 1;
     cursor: pointer;
-}
+    margin-top: -30px;
+    padding-right: 10px;
 
-main footer button {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-weight: bold;
-    color: #6fbced;
-    vertical-align: top;
-    margin-left: 330px;
+  }
+  @media screen and (max-width: 735px) {
+  .message-input .wrap .attachment {
+      margin-top: 17px;
+      right: 65px;
+    }
+  }
+.message-input .wrap .attachment:hover {
+    opacity: 1;
+  }
+
+ .message-input .wrap .submit {
+    float: right;
+    border: none;
+    width: 40px;
+    padding: 12px 0;
+    cursor: pointer;
+    background: #32465a;
+    color: #f5f5f5;
+    margin-top: -80px;
+    margin-right: 25px;
+    border-radius: 5px;
+
+  }
+  @media screen and (max-width: 735px) {
+   .message-input .wrap .submit {
+      padding: 16px 0;
+    }
+  }
+ .message-input .wrap .submit:hover {
+    background: #435f7a;
+  }
+ .message-input .wrap button:focus {
+    outline: none;
+  }
+
+ 
+
+
+  .search-box,.close-icon,.search-wrapper {
+    position: relative;
+    height: 50px;
+    padding: 10px;
+  }
+  .search-wrapper {
+    width: 500px;
+    margin: auto;
+    margin-top: 10px;
+  }
+  .search-box {
+    width: 80%;
+    border: 1px solid #ccc;
+    outline: 0;
+    border-radius: 15px;
+    margin-left: -15px;
+  }
+  .search-box:focus {
+    box-shadow: 0 0 15px 5px #b0e0ee;
+    border: 2px solid #bebede;
+  }
+  .close-icon {
+    border:1px solid transparent;
+    background-color: transparent;
     display: inline-block;
-    margin-top: -35px;
-    width: 80px;
-    height: 35px;
-}
-
+    vertical-align: middle;
+    outline: 0;
+    cursor: pointer;
+  }
+  .close-icon:after {
+    content: "X";
+    display: block;
+    width: 15px;
+    height: 15px;
+    position: absolute;
+    background-color: #FA9595;
+    z-index:1;
+    right: 35px;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    padding: 2px;
+    border-radius: 50%;
+    text-align: center;
+    color: white;
+    font-weight: normal;
+    font-size: 12px;
+    box-shadow: 0 0 2px #E50F0F;
+    cursor: pointer;
+  }
+  .search-box:not(:valid) ~ .close-icon {
+    display: none;
+  }
